<resources>
    <string name="app_name">eVidyaloka</string>
    <string name="action_settings">Settings</string>
    <string name="action_sort">Sort</string>
    <string name="action_share">Share</string>
    <string name="sort_by_popularity">Popular</string>
    <string name="sort_by_rating">Rating</string>
    <string name="sort_by_favorite">Favorite</string>
    <string name="title_activity_home">Home Activity</string>
    <string name="title_activity_movies_details">MoviesDetailsActivity</string>
    <string name="no_internet">No Internet Available!</string>
    <string name="release_date">Release Date</string>
    <string name="rating">Rating</string>
    <string name="overview">Overview</string>
    <string name="videos">Videos</string>
    <string name="reviews">Reviews</string>
    <string name="movie_item_btn_favorite_desc">Save to favorites</string>
    <string name="player_error">Error initializing YouTube player</string>
    <string name="no_reviews_available">No Reviews Available</string>
    <string name="no_favorite_available">No Favorite Movies Available</string>
    <string name="added_favorite">Saved to favorites</string>
    <string name="removed_favorite">Removed from favorites</string>
    <string name="content_authority">com.headrun.evd</string>
    <string name="message_empty_movie_fragment">Please choose a movie</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string-array name="languages">
        <item>Hindi</item>
        <item>Telugu</item>
        <item>Kannada</item>
        <item>Bengali</item>
        <item>Marathi</item>
        <item>Tamil</item>
    </string-array>
    <string name="subjects">Subjects</string>
    <string name="apply">Apply</string>
    <string name="filter_lang">Language Filter </string>
    <string name="all_lang">All Languages</string>
    <string name="filter_sub">Filter Subjects</string>
    <string name="states_filter">States Filter</string>
    <string name="cities">Cities</string>
    <string name="teacher_teaching">Teachers teaching</string>
    <string name="teacher_need">More needed</string>
    <string name="teach">Teach</string>
    <string name="sessions">My Sessions</string>
    <string name="profile">Profile</string>
    <string-array name="subject">
        <item>Science</item>
        <item>English_Foundation</item>
        <item>Maths</item>
    </string-array>
    <string-array name="preferred_day">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string name="location">Location</string>
    <string name="cancel">Cancel</string>
    <string name="evidya_slot_error">eVidyaloka Error</string>
    <string name="confirm">Confirm</string>
    <string name="login">Login</string>
    <string name="email_err">enter Email</string>
    <string name="error_pwd">Enter Password</string>
    <string name="action_skip">Skip</string>
    <string name="signup">Signup</string>
    <string name="signnup_title">"Dont have an account?"</string>
    <string name="login_title">Already have an account?</string>
    <string-array name="session_type">
        <item>Scheduled</item>
        <item>Teaching</item>
        <item>Cancelled</item>
        <item>Completed</item>
    </string-array>
    <string-array name="gender_list">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="profession_list">
        <item>Business and Financial Operations</item>
        <item>Community and Social Service</item>
        <item>Computer and Mathematical</item>
        <item>Education, Training, and Library</item>
        <item>Farming, Fishing, and Forestry</item>
        <item>Healthcare Practitioners and Technical</item>
        <item>Housewife</item>
        <item>Legal</item>
        <item>Life, Physical, and Social Science</item>
        <item>Management</item>
        <item>Military Specific</item>
        <item>Office and Administrative Support</item>
        <item>Others</item>
        <item>Personal Care and Service</item>
        <item>Production/Manufacturing</item>
        <item>Retd. Professional</item>
        <item>Sales and Related</item>
        <item>Self-employed</item>
    </string-array>
    <string-array name="medium_list">
        <item>Kannada</item>
        <item>Assamese</item>
        <item>Bengali</item>
        <item>Gujarathi</item>
        <item>Hindi</item>
        <item>Malayalam</item>
        <item>Marathi</item>
        <item>Oriya</item>
        <item>Punjabi</item>
        <item>Tamil</item>
        <item>Telugu</item>
        <item>Urdu</item>
    </string-array>
    <string name="reference_channel">Reference Channel</string>
    <string-array name="role_list">
        <item>Teacher</item>
        <item>Center Admin</item>
        <item>Content Developer</item>
        <item>Well Wisher</item>
        <item>Content Admin</item>
    </string-array>
    <string-array name="role_desc">
        <item>Teach Online remotely, from wherever you are via Skype, for 2 hours a week, to the children of  Government Schools in rural villages in India</item>
        <item>Be a Class coordinator remotely from wherever you are. Semi online. Typically 4 to 5 hours of  volunteering efforts per week.</item>
        <item>Help search, identify, curate and review contents. Offline, at you own pace, from wherever you are.  Typically 2 to 3 hours a week of volunteering efforts.</item>
        <item>Just be a well wisher by helping spread the word, follow our activities</item>
        <item>Be a content development coordinator with 10 to 15 content volunteers, at your own pace and  rhythm, from where ever you are. Typically 3 to 4 hours in a week of volunteering efforts</item>
    </string-array>
    <string name="login_error">Authentication error please check the login credentials</string>
    <string name="faceing_issue">It seems to be  an issue please try again later</string>
    <string name="pwd_match_error">Password doesn\'t match</string>
    <string name="first_name">First name * </string>
    <string name="last_name">Last name </string>
    <string name="mising_first_name">Missing first name</string>
    <string name="mising_last_name">Missing last name</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_username">Enter username</string>
    <string name="no_result">No results found.</string>
    <string name="no_slots">Slots are not available</string>
    <string name="no_demands">Demands are not found</string>
    <string name="update_status">Update</string>
    <string name="release">Release slots</string>
    <string name="Confirm">Confirm slots</string>
    <string name="demand">Demands</string>
    <string name="profile_edit">My profile</string>
    <string name="gender">Gender  * </string>
    <string name="sel_gender">select Gender</string>
    <string name="age">Age * </string>
    <string name="email">E-mail * </string>
    <string name="alternate_email">Alternate Email</string>
    <string name="profession">Profession</string>
    <string name="skype_id">Skype ID</string>
    <string name="ph_no">Phone No.</string>
    <string name="preferred_medium">Preferred  Medium * </string>
    <string name="referrer">Referrer</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="brief_intro">Brief_intro</string>
    <string name="save">save</string>
    <string name="selectCountry">Select Country</string>
    <string name="cityError">Please select contry and state</string>
    <string name="email_error">Please enter valid email id</string>
    <string name="missing_fields">Please enter missing fileds</string>
    <string name="role">Role * </string>
    <string name="title_welcome">Welcome</string>
    <string name="hint_email_address">Email Address</string>
    <string name="hint_email_username">Email / User name</string>
    <string name="hint_password">Password</string>
    <string name="btn_text_continue_learning">sign in</string>
    <string name="btn_text_password_reset">Forgot password</string>
    <string name="btn_text_switch_to_signup">or sign up</string>
    <string name="btn_text_signin_with">sign in with</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="btn_text_signup">sign up</string>
    <string name="btn_text_switch_to_signin">or sign in</string>
    <string name="sel_role">Select role</string>
    <string name="plz_sel_role">Select a role</string>
    <string name="volunteer">Become Volunteer</string>
    <string name="fluent_sel_native_lang">Can you Read and Write fluently on the selected Native Language? *</string>
    <string name="radio_yes">Yes</string>
    <string name="radio_no">No</string>
    <string name="fluent_sel_other_lang">Are you fluent to Speak, Read and Write in any other listed language? *</string>
    <string name="plz_sel_other_lang">please select Langauage</string>
    <string name="provide_2hours">Online classes happen during school hours. i.e 10am to 4pm IST. Mon to Friday. To Teach online, It is required to provide two 1-hr slots, which can be any two different days and any two slots in this window. Do you think you can commit for the same? *</string>
    <string name="motivate">What motivates you to come on a platform like this and contribute your time? *</string>
    <string name="scenario_one">Sushmita, a volunteer teacher, has taught Fractions to a class of 20 children from Grade 6 for the last 4 sessions. On the 5th day, except for Seetha and Ramu all the other 18 children were clueless about what she had taught so far. What should be the next best course of action for Sushmita ?</string>
    <string name="scenario_two">She is now fully prepared for her next class. However on the day of her session, came an unavoidable personal/professional commitment for her few hours prior to the class. * What will you do if you were in her situation at that moment ?</string>
    <string name="scenario_three">As Sushmita comes for the next class, the children were trying to avoid and sought a break from the class requesting to cancel. * Your choice of action would be ?</string>
    <string name="scenario_four">What is best option to Inspire the child to learn ? *</string>
    <string name="content_se_1">Please tick the language from the list below that you can read and write : </string>
    <string name="content_se_2">Can you translate a given English document into one of the local languages for eV schools ? </string>
    <string name="content_se_3">Please tick the subject for which you wish to prepare content :  </string>
    <string name="content_se_4">Are you comfortable to search for videos, images on internet ?</string>
    <string name="content_se_5">Are you comfortable to prepare worksheets and assessments based on textbook material ?</string>
    <string name="content_se_6">Can you transliterate the list of important terms for the topics ?</string>
    <string name="content_se_7">How many hours a week can you contribute towards contentresearch ? </string>
    <string name="about_us_invite">Inviting passionate volunteers from across the globe to impart quality education to children in remote villages of India via live online classes. Sign Up to help build an educated rural India.</string>
    <string name="about_us_volunteer">Volunteer from the comforts of your home/office</string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
</resources>