<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView style="@style/self_evaluation_card">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                style="@style/self_evaluation_lay"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true">

                <TextView
                    style="@style/self_evaluation_question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fluent_sel_native_lang"
                    android:textSize="@dimen/text_large" />

                <RadioGroup
                    android:id="@+id/radio_fluent_lang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_fluent_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/radio_yes" />

                    <RadioButton
                        android:id="@+id/radio_fluent_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/radio_no" />

                </RadioGroup>

                <requestFocus />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/other_lang_lay"
            style="@style/self_evaluation_card">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                style="@style/self_evaluation_lay">

                <TextView
                    style="@style/self_evaluation_question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_keyboard_arrow_down_black_24dp"
                    android:text="@string/fluent_sel_other_lang"
                    android:textSize="@dimen/text_large" />

                <TextView
                    android:id="@+id/sel_other_lang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/plz_sel_other_lang"
                    android:textSize="@dimen/text_large" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView style="@style/self_evaluation_card">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                style="@style/self_evaluation_lay">

                <TextView
                    style="@style/self_evaluation_question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/provide_2hours"
                    android:textSize="@dimen/text_large" />

                <RadioGroup
                    android:id="@+id/radio_provide_hours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_provide_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/radio_yes" />

                    <RadioButton
                        android:id="@+id/radio_provide_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/radio_no" />

                </RadioGroup>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView style="@style/self_evaluation_card">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                style="@style/self_evaluation_lay">

                <EditText
                    android:id="@+id/edt_motivate"
                    style="@style/self_evaluation_question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_border"
                    android:gravity="top"
                    android:hint="@string/motivate"
                    android:minLines="5"
                    android:padding="10dp"
                    android:scrollbars="vertical"
                    android:textSize="@dimen/text_large" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>