<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/lang_lay"
            style="@style/self_evaluation_card">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                style="@style/self_evaluation_lay">

                <TextView
                    style="@style/self_evaluation_question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_keyboard_arrow_down_black_24dp"
                    android:text="@string/content_se_1"
                    android:textSize="@dimen/text_large" />

                <TextView
                    android:id="@+id/lang_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/plz_sel_other_lang"
                    android:textSize="@dimen/text_large" />

            </LinearLayout>

            <requestFocus />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView style="@style/self_evaluation_card">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                style="@style/self_evaluation_lay"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true">

                <TextView
                    style="@style/self_evaluation_question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/content_se_2"
                    android:textSize="@dimen/text_large" />

                <RadioGroup
                    android:id="@+id/radio_content_se_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView style="@style/self_evaluation_card">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                style="@style/self_evaluation_lay"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true">

                <TextView
                    style="@style/self_evaluation_question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/content_se_3"
                    android:textSize="@dimen/text_large" />

                <RadioGroup
                    android:id="@+id/radio_content_se_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView style="@style/self_evaluation_card">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                style="@style/self_evaluation_lay"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true">

                <TextView
                    style="@style/self_evaluation_question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/content_se_4"
                    android:textSize="@dimen/text_large" />

                <RadioGroup
                    android:id="@+id/radio_content_se_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView style="@style/self_evaluation_card">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                style="@style/self_evaluation_lay"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true">

                <TextView
                    style="@style/self_evaluation_question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/content_se_5"
                    android:textSize="@dimen/text_large" />

                <RadioGroup
                    android:id="@+id/radio_content_se_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView style="@style/self_evaluation_card">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                style="@style/self_evaluation_lay"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true">

                <TextView
                    style="@style/self_evaluation_question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/content_se_6"
                    android:textSize="@dimen/text_large" />

                <RadioGroup
                    android:id="@+id/radio_content_se_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView style="@style/self_evaluation_card">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                style="@style/self_evaluation_lay"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true">

                <TextView
                    style="@style/self_evaluation_question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/content_se_7"
                    android:textSize="@dimen/text_large" />

                <RadioGroup
                    android:id="@+id/radio_content_se_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>