<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="ifContentScrolls"
        android:requiresFadingEdge="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1.0"
                android:orientation="vertical"
                android:paddingLeft="@dimen/form_padding"
                android:paddingRight="@dimen/form_padding">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/evidyalogo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="38dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/title_welcome"
                    android:textColor="@color/theme_primary_dark"
                    android:textSize="24sp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/email_field"
                        style="@style/EditText.Evd.EmailAuth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="22dp"
                        android:layout_marginTop="40dp"
                        android:fontFamily="fonts/Roboto-Light.ttf"
                        android:hint="@string/hint_email_address"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:selectAllOnFocus="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/password_field"
                        style="@style/EditText.Evd.EmailAuth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="fonts/Roboto-Light.ttf"
                        android:hint="@string/hint_password"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:selectAllOnFocus="true" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_login"
                    style="@style/Button.Udacity.Blue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/btn_text_continue_learning" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/btn_switch_to_signup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:background="@color/white"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/btn_text_switch_to_signup"
                        android:textColor="@color/button_color"
                        android:textSize="@dimen/text_large" />

                    <TextView
                        android:id="@+id/btn_forgot_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_margin="20dp"
                        android:background="@color/white"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/btn_text_password_reset"
                        android:textColor="@color/text_blue_gray" />

                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:background="@color/divider_light_gray" />

            <include layout="@layout/include_social_auth" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>
